[package]
name = "tigerbeetle-unofficial-lib"
edition = "2021"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tigerbeetle-unofficial-sys = { workspace = true }
bitflags = { workspace = true, default-features = false }
num-derive = { workspace = true }
num-traits = { workspace = true }
pin-project = { workspace = true }
