[package]
name = "tigerbeetle-unofficial"
edition = "2021"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tigerbeetle-unofficial-sys = { workspace = true, features = ["generated-safe"] }
num-traits = { workspace = true, default-features = false }
pin-project = { workspace = true }
