[package]
name = "tigerbeetle-unofficial-sys"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version.workspace = true
description = "Native bindings to the tigerbeetle library"
repository.workspace = true
license.workspace = true
categories = ["external-ffi-bindings"]

[features]
generated-safe = []

[dependencies]
bitflags = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }

[build-dependencies]
bindgen = { workspace = true }
curl = { workspace = true }
zip = { workspace = true, features = ["deflate"], default-features = false }
syn = { workspace = true, features = ["parsing", "full", "printing", "visit"], default-features = false }
quote = { workspace = true, default-features = false }
proc-macro2 = { workspace = true, default-features = false }
